Add render.yaml for Render deployment

--- a/render.yaml
+++ b/render.yaml
@@ -1,43 +1,36 @@
 services:
   - type: web
-    name: n8n-service
+    name: my-hrm-n8n
     env: docker
     plan: free
     image: docker.io/n8nio/n8n:latest
     envVars:
-      - key: WEBHOOK_TUNNEL_URL
-        value: https://twoja-domena.onrender.com
       - key: N8N_BASIC_AUTH_ACTIVE
         value: "true"
       - key: N8N_BASIC_AUTH_USER
         fromSecret: N8N_USER
       - key: N8N_BASIC_AUTH_PASSWORD
         fromSecret: N8N_PASSWORD
+      - key: WEBHOOK_TUNNEL_URL
+        value: https://my-hrm-n8n.onrender.com
       - key: DB_TYPE
         value: postgres
       - key: DB_POSTGRESDB_HOST
-        value: n8n-db.internal
+        fromService:
+          type: psql
+          name: my-n8n-db
       - key: DB_POSTGRESDB_PORT
         value: "5432"
       - key: DB_POSTGRESDB_DATABASE
         value: n8n
       - key: DB_POSTGRESDB_USER
-        value: render
+        fromSecret: DB_USER
       - key: DB_POSTGRESDB_PASSWORD
-        fromDatabase:
-          name: n8n-db
-          property: userPassword
-    disks:
-      - name: n8n-data
-        mountPath: /home/node/.n8n
+        fromSecret: DB_PASSWORD
 
 databases:
-  - name: n8n-db
-    engine: postgres
-    version: "13"
+  - name: my-n8n-db
     plan: free
-
-disks:
-  - name: n8n-data
-    sizeGB: 1
-    plan: free
+    databaseName: n8n
+    user: ${DB_USER}
+    password: ${DB_PASSWORD}
